syntax = "proto2";
package com.ruixi.tpulse.convention;
option java_package="com.tenth.nft.protobuf";

message NFT_CATEGORY_REBUILD_IC{
  required int64 version = 1;
}

message NFT_COLLECTION_REBUILD_IC{
  required int64 collectionId = 1;
}

message NFT_ITEM_REBUILD_IC{
  required int64 collectionId = 1;
}
